--- a/templates/template4.html
+++ b/templates/template4.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- Хедер -->
-    <div class="header fourth_template_clearfix">
+    <div class="header template_clearfix">
         <a href="../index.html" class="logo">Комплексна робота №1</a>
         <div class="header-right">
             <a href="../index.html">Макет 1</a>
