--- a/static/styles/template4.css
+++ b/static/styles/template4.css
@@ -68,18 +68,27 @@ span{
         height: 6rem;
     }
 
-    .table1, .table1 td {
-        display: block;
+    .table1{
         width: 100%;
+        table-layout: fixed;
+    }
+
+    .table1 td{
+        display: block;
     }
 
     .image, .image1 {
         width: 100%;
         height: auto;
     }
+
+    tr{
+        display: block;
+    }
+
     .td1, .td2 {
-        width: 100%;
-        text-align: left;
+        width: 94%;
+        padding: 10px;
     }
 
     h2 {
