Template 4 fix for phone & Widescreen for template 2

--- a/templates/template2.html
+++ b/templates/template2.html
@@ -61,7 +61,7 @@
             </select>
 
             <p class="text1">Ціна:</p>
-            <input type="range" id="price-range" name="price" min="1000" max="20000" step="200">
+            <input type="range" id="price-range" name="price" min="1000" max="20000" step="200" class="price_range">
             <p class="text1">Від 1000 до 20000 грн</p>
             <button class="Apply_filter">Застосувати зміни</button>
         </div>
