--- a/static/styles/template2.css
+++ b/static/styles/template2.css
@@ -218,3 +218,58 @@ p {
         width: 100%;
     }
 }
+@media screen and (min-width: 1300px) and (min-aspect-ratio: 21/9){
+    .logo2{
+        height: 12rem;
+        width: 12rem;
+
+    }
+    .Company{
+        font-size: 5rem;
+    }
+    .Searcher{
+        height: 7rem;
+        font-size: 3rem;
+    }
+    .Search_icon{
+        height: 4rem;
+        width: 4rem;
+    }
+    .Cart_icon{
+        height: 8rem;
+        width: 8rem;
+    }
+    .pos4 h2, p{
+        font-size: 4rem;
+    }
+    #category{
+        width: 10rem;
+        font-size: 3rem;
+    }
+    #category option{
+        font-size: 1rem;
+    }
+    .price_range{
+        padding: 2rem;
+        width: 30rem;
+        transform: scale(1,5);
+    }
+    .Apply_filter{
+        width: 100%;
+        height: 6rem;
+        border-radius: 20px;
+        font-size: 3rem;
+    }
+    .good_img{
+        height: 35rem;
+    }
+    .elem2{
+        font-size: 3rem;
+    }
+    .elem3{
+        font-size: 2rem;
+    }
+    .Buy_button{
+        font-size: 2.5rem;
+    }
+}
