--- a/static/styles/template4.css
+++ b/static/styles/template4.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 .logo4 {
     width: 9rem;
     height: 9rem;
@@ -87,7 +90,7 @@ span{
     }
 
     .td1, .td2 {
-        width: 93%;
+        width: 100%;
         padding: 10px;
     }
 
