--- a/static/styles/Css/style.css
+++ b/static/styles/Css/style.css
@@ -2,7 +2,7 @@
     font-family: 'Oswald';
     font-style: normal;
     font-weight: normal;
-    src: url("../fonts/Oswald-Regular.ttf") format('opentype');
+    src: url("../../fonts/Oswald-Regular.ttf") format('opentype');
 }
 body{
     font-family:'Oswald', sans-serif;
